pass kernal cmd through lambda-manager