@@ -7,26 +7,26 @@ import java.nio.file.Paths;
 
 public abstract class Proxy {
 
-	protected static String TIMESTAMP_TAG = "lambda_timestamp=";
-	protected static String ENTRY_POINT_TAG = "lambda_entry_point=";
-	protected static String PORT_TAG = "lambda_port=";
+    protected static String TIMESTAMP_TAG = "lambda_timestamp=";
+    protected static String ENTRY_POINT_TAG = "lambda_entry_point=";
+    protected static String PORT_TAG = "lambda_port=";
 
-	public static String[] loadArguments(String[] expectedArgumentTags) {
+    public static String[] loadArguments(String[] expectedArgumentTags) {
         try {
             String[] args = new String[expectedArgumentTags.length];
-			String cmdline = new String(Files.readAllBytes(Paths.get("/proc/cmdline")), StandardCharsets.US_ASCII);
+            String cmdline = Files.readString(Paths.get("/proc/cmdline"), StandardCharsets.US_ASCII);
 
-			for (int i = 0; i < expectedArgumentTags.length; i++) {
-				int start = cmdline.indexOf(expectedArgumentTags[i]) + expectedArgumentTags[i].length();
-				int finish = cmdline.indexOf(' ', start);
-				args[i] = cmdline.substring(start, finish);
-			}
+            for (int i = 0; i < expectedArgumentTags.length; i++) {
+                int start = cmdline.indexOf(expectedArgumentTags[i]) + expectedArgumentTags[i].length();
+                int finish = cmdline.indexOf(' ', start);
+                args[i] = cmdline.substring(start, finish);
+            }
 
-			return args;
-		} catch (IOException e) {
-			// Ignore.
-		}
+            return args;
+        } catch (IOException e) {
+            // Ignore.
+        }
         return null;
-	}
+    }
 
 }
